Arm/cm2app1db.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "environmentName": {
            "type": "string",
            "metadata": {
                "description": "Name of the environment to deploy (eg. 'acc')"
            }
        },
        "adminPassword": {
            "type": "string",
            "metadata": {
                "description": "Default password for the new environment"
            }
        }
    },
    "variables": {
        "vmNameAppServer": "[concat('cm-app01-',parameters('environmentName'),'')]",
        "vmNameWebServer": "[concat('cm-web01-',parameters('environmentName'),'')]",
        "vmNameDbServer": "[concat('cm-db01-',parameters('environmentName'),'')]",
        "sizeAppServer": "Standard_DS2_v2",
        "skuAppServer": "2016-Datacenter",
        "sizeDbServer": "Standard_DS4_v2",
        "skuDbServer": "SQLDEV",
        "virtualNetworkName": "[concat('cm-',parameters('environmentName'),'-vnet')]",
        "addressPrefix": "10.0.0.0/16",
        "frontendSubnetName": "frontend-subnet",
        "frontendSubnetPrefix": "10.0.1.0/24",
        "frontendNameNetworkSecurityGroup": "[concat('cm-',parameters('environmentName'),'-nsg-frontend')]",
        "backendSubnetName": "backend-subnet",
        "backendSubnetPrefix": "10.0.2.0/24",
        "backendNameNetworkSecurityGroup": "[concat('cm-',parameters('environmentName'),'-nsg-backend')]",
        "location": "West Europe",
        "adminUsername": "[concat('adm_', parameters('environmentName'))]"
    },
    "resources": [
        {
            "comments": "ARM-template cm-app01 created by gjh",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmNameAppServer')]",
            "apiVersion": "2018-06-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('sizeAppServer')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "[variables('skuAppServer')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(variables('vmNameAppServer'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 1,
                            "name": "[concat(variables('vmNameAppServer'),'_disk_s')]",
                            "createOption": "Empty",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            },
                            "diskSizeGB": 100
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('vmNameAppServer')]",
                    "adminUsername": "[variables('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameAppServer'), '_network_interface'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameAppServer'), '_network_interface'))]"
            ]
        },
        {
            "comments": "ARM-template cm-web01 created by gjh",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmNameWebServer')]",
            "apiVersion": "2018-06-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('sizeAppServer')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "[variables('skuAppServer')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(variables('vmNameWebServer'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 1,
                            "name": "[concat(variables('vmNameWebServer'),'_disk_s')]",
                            "createOption": "Empty",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            },
                            "diskSizeGB": 100
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('vmNameWebServer')]",
                    "adminUsername": "[variables('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameWebServer'), '_network_interface'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameWebServer'), '_network_interface'))]"
            ]
        },
        {
            "comments": "ARM-template cm-db01 created by gjh",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmNameDbServer')]",
            "apiVersion": "2018-06-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('sizeDbServer')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftSQLServer",
                        "offer": "SQL2016SP2-WS2016",
                        "sku": "[variables('skuDbServer')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(variables('vmNameDbServer'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(variables('vmNameDbServer'),'_disk_L')]",
                            "createOption": "Empty",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            },
                            "diskSizeGB": 200
                        },
                        {
                            "lun": 1,
                            "name": "[concat(variables('vmNameDbServer'),'_disk_S')]",
                            "createOption": "Empty",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            },
                            "diskSizeGB": 40
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[variables('vmNameDbServer')]",
                    "adminUsername": "[variables('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameDbServer'), '_network_interface'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('vmNameDbServer'), '_network_interface'))]"
            ]
        },
        {
            "comments": "Dnszone",
            "type": "Microsoft.Network/dnsZones",
            "name": "[concat('',parameters('environmentName'),'-cowmanager.com')]",
            "apiVersion": "2018-05-01",
            "location": "global",
            "tags": {},
            "scale": null,
            "properties": {
                "zoneType": "Public"
            },
            "dependsOn": []
        },
        {
            "comments": "Network interface APP server",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('vmNameAppServer'), '_network_interface')]",
            "apiVersion": "2018-02-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameAppServer'), '-PublicIp'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "[concat(variables('vmNameAppServer'), '.ax.internal.cloudapp.net')]"
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameAppServer'), '-PublicIp'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
            ]
        },
        {
            "comments": "Network interface WEB server",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('vmNameWebServer'), '_network_interface')]",
            "apiVersion": "2018-02-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameWebServer'), '-PublicIp'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "[concat(variables('vmNameWebServer'), '.ax.internal.cloudapp.net')]"
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameWebServer'), '-PublicIp'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
            ]
        },
        {
            "comments": "Network interface DB Server",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(variables('vmNameDbServer'), '_network_interface')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameDbServer'), '-PublicIp'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "[concat(variables('vmNameDbServer'), '.ax.internal.cloudapp.net')]"
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('vmNameDbServer'), '-PublicIp'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('backendSubnetName'))]"
            ]
        }, 
        {
            "comments": "Network security group",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('backendNameNetworkSecurityGroup')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 301,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "http-traffic",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 311,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "https-traffic",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 321,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "msdtc_5000-5200",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5000-5200",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 331,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Octopus",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10933",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 341,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Powershell-remoting",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5985-5986",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 351,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "sql-access-from-office",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 361,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Network security group",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('frontendNameNetworkSecurityGroup')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 301,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Octopus",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10933",
                            "sourceAddressPrefix": "62.132.200.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 311,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Public IP APP",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[concat(variables('vmNameAppServer'), '-PublicIp')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('vmNameAppServer')]",
                    "fqdn": "[concat(variables('vmNameAppServer'),'.westeurope.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Public IP Web",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[concat(variables('vmNameWebServer'), '-PublicIp')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('vmNameWebServer')]",
                    "fqdn": "[concat(variables('vmNameWebServer'),'.westeurope.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Public IP APP",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[concat(variables('vmNameDbServer'), '-PublicIp')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('vmNameDbServer')]",
                    "fqdn": "[concat(variables('vmNameDbServer'),'.westeurope.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Virtual network",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "apiVersion": "2018-02-01",
            "location": "[variables('location')]",
            "scale": null,
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('frontendSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('frontendSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontendNameNetworkSecurityGroup'))]"
                            }
                        }
                    },
                    {
                                                "name": "[variables('backendSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('backendSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]"
                            }
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "resources": [
                {
                  "apiVersion": "2018-02-01",
                  "type": "subnets",
                  "location": "[variables('location')]",
                  "name": "[variables('frontendSubnetName')]",
                  "dependsOn": [
                    "[variables('virtualNetworkName')]"
                  ],
                  "properties": {
                    "addressPrefix": "[variables('frontendSubnetPrefix')]"
                  }
                },
                {
                  "apiVersion": "2018-02-01",
                  "type": "subnets",
                  "location": "[variables('location')]",
                  "name": "[variables('backendSubnetName')]",
                  "dependsOn": [
                    "[variables('virtualNetworkName')]"
                  ],
                  "properties": {
                    "addressPrefix": "[variables('backendSubnetPrefix')]"
                  }
                }
              ],
           "dependsOn": [
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backendNameNetworkSecurityGroup'))]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontendNameNetworkSecurityGroup'))]"
       ]
        },
        {
            "comments": "Storage account",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[concat('cm',parameters('environmentName'),'diag')]",
            "apiVersion": "2018-07-01",
            "location": "westeurope",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        }
    ]
}
